# mecanum_drive_disinfection_robot

./: .gitignore  README.md  cover_room.py  cover_room_debug.py  cover_room_geometry_fix.py  cover_room_v3  coverage_bt.xml  frames_2025-08-02_00.53.41.gv  frames_2025-08-02_01.08.20.gv  frames_2025-08-02_01.09.50.gv  frames_2025-08-02_01.11.21.gv  frames_2025-08-02_01.15.35.gv  frames_2025-11-22_11.43.21.gv  frames_2025-11-22_11.44.15.gv  frames_2025-12-13_05.48.16.gv  frames_2026-01-09_14.30.54.gv  frames_2026-01-09_14.32.53.gv  safety_speaker.py  test_square.py  wait_and_configure.sh
config/: mecanum_coverage.yaml  nav2_params.yaml
install/: local_setup.sh  setup.sh
install/mecanum_drive/share/mecanum_drive/: local_setup.bash  package.bash  (+8 more)
log/: latest_build
maps/: department.pgm  department.yaml  my_home.pgm  my_home.yaml  my_home_v2.pgm  my_home_v2.yaml  my_map.pgm  my_map.yaml
src/mecanum_drive/: CMakeLists.txt  README.md  package.xml
src/mecanum_drive/bridge_node/: esp32_bridge.py
src/mecanum_drive/config/: ekf.yaml  mecanum_controllers.yaml
src/mecanum_drive/description/: robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/mecanum_drive/launch/: launch_sim.launch.py  rsp.launch.py  test_launch.py
src/mecanum_drive/meshes/: lidar.STL  plate.STL
src/robot_hardware_interface/: CMakeLists.txt  package.xml  robot_hardware_interface.xml
src/robot_hardware_interface/include/robot_hardware_interface/: robot_hardware_interface.hpp
src/robot_hardware_interface/src/: robot_hardware_interface.cpp
src/ros2_mpu6050_driver/src/: mpu6050driver.cpp
(+45 files in other folders)
